<package format="2">
  <name>tf_imu_to_base</name>
  <version>0.0.0</version>
  <description>The imu transform package</description>

  <maintainer email="arghyame20buet@gmail.com">Arghya Chatterjee</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
